<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultarOcorrencia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txSelecionar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/Texto_Selecionar_Tipo_Ocorrencia"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbEmAndamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Texto_Radio_Button_1" />

                <RadioButton
                    android:id="@+id/rbAnalisando"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Texto_Radio_Button_2" />

                <RadioButton
                    android:id="@+id/rbFinalizada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Texto_Radio_Button_3" />

                <RadioButton
                    android:id="@+id/rbConcluida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Texto_Radio_Button_4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txSelecionarMes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Texo_Informativo_Mes"
                    android:textColor="@android:color/background_dark"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spMeses"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btPesquisar"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/Texto_Botão_Pesquisar_Ocorrencias" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recListragem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>