<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Layout_Principal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorAccent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/layout_Img_Perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginLeft="3dp"
            android:background="@drawable/perfilmenu"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_Corpo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menuNomeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nav_header_title"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/menuEmailUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_Rodape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="right|center_horizontal"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/textConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="100dp"
        android:gravity="right"
        android:text="@string/Menu_principal_Conta"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        android:textStyle="normal"
        app:fontFamily="sans-serif" />

</RelativeLayout>
