<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgPerfilUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="99dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@mipmap/ic_menuser2_round" />

                <TextView
                    android:id="@+id/NomeUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Cassiano Silva"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/EmailUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="cassianosilva@gmail.com" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctLocalOcorrencia"
                    android:layout_width="310dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/Texto_Local_Ocorrencia" />

                <ImageButton
                    android:id="@+id/btLocalOcorrencia"
                    android:layout_width="53dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_edit_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctImagemOcorrencia"
                    android:layout_width="360dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/Imagem_Ocorrência" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOcorrencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/iconcameraoco" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctDataOcorrencia"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/Texto_Data_Ocorrencia_Postadada"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_edit_icon" />

                <TextView
                    android:id="@+id/ctHorarioOcorrencia"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/Texto_Horario_Ocorrencia" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_edit_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctTextoStatusOcorrencia"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Texto_Status_Ocorrencia" />

                <TextView
                    android:id="@+id/ctStatusOcorrencia"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinnerStatus"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btAlterarDados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="60dp"
                    android:background="@drawable/botao_customizado"
                    android:text="@string/Texto_Botão_Alterar_Ocorrencia"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>